프로젝트작업

--- a/AndroidStudioProjects/Paprika/app/src/main/res/drawable/button_design.xml
+++ b/AndroidStudioProjects/Paprika/app/src/main/res/drawable/button_design.xml
@@ -3,14 +3,14 @@
 
     <item android:state_focused="false" android:state_pressed="false">
         <shape>
-            <solid android:color="#ff7f00" />
+            <solid android:color="#EC4C27" />
             <corners android:radius="10dp" />
         </shape>
     </item>
 
     <item android:state_focused="false" android:state_pressed="true">
         <shape>
-            <solid android:color="#ff7f00" />
+            <solid android:color="#EC4C27" />
             <corners android:radius="10dp" />
         </shape>
     </item>
