--- a/AndroidStudioProjects/Paprika/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/Paprika/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">-
-
-    <LinearLayout
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="-99dp">
+        tools:context=".MainActivity">
 
         <include
             android:id="@+id/toolbar"
             layout="@layout/toolbar_main" />
-
-        <Button
-            android:id="@+id/btn_eLearning"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/button_design"
-            android:text="e-Learning"
-            android:textColor="@color/white" />
-
-        <LinearLayout
-            android:id="@+id/schedule"
+        <FrameLayout
+            android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:background="#FFCC99"
-            android:orientation="vertical" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_below="@+id/button">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <!--<fragment
+                    android:id="@+id/MainFragment"
+                    android:name="com.example.a82107.myfragment1.MainFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />-->
+        </FrameLayout>
+</LinearLayout>
