--- a/AndroidStudioProjects/Paprika/app/src/main/res/layout/toolbar_main.xml
+++ b/AndroidStudioProjects/Paprika/app/src/main/res/layout/toolbar_main.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
-    android:background="#ff7f00"
+<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/paprika"
+    app:titleTextColor="@color/white"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textColor="#ffffff"
-        android:textSize="20sp"/>
 </androidx.appcompat.widget.Toolbar>
