--- a/AndroidStudioProjects/Paprika/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/Paprika/app/src/main/res/layout/activity_main.xml
@@ -8,28 +8,16 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_main" />
-    <Button
-        android:id="@+id/button"
-        android:layout_marginLeft="200dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:text="Home" />
 
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/button">
+        android:layout_below="@+id/toolbar">
     <fragment
         android:name="com.example.paprika.LoginFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-        <!--<fragment
-            android:id="@+id/MainFragment"
-            android:name="com.example.a82107.myfragment1.MainFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />-->
     </FrameLayout>
 
 </RelativeLayout>
