--- a/AndroidStudioProjects/Paprika/app/src/main/res/layout/toolbar_main.xml
+++ b/AndroidStudioProjects/Paprika/app/src/main/res/layout/toolbar_main.xml
@@ -5,5 +5,11 @@
     app:titleTextColor="@color/white"
     android:layout_height="?attr/actionBarSize"
     android:background="@color/paprika">
-
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/paprika"
+        android:text="@string/app_name"
+        android:textColor="@color/white" />
 </androidx.appcompat.widget.Toolbar>
