--- a/AndroidStudioProjects/Paprika/app/src/main/res/layout/fragment_course.xml
+++ b/AndroidStudioProjects/Paprika/app/src/main/res/layout/fragment_course.xml
@@ -3,21 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ScheduleFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:id="@+id/fragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="강좌목록"
-        android:textSize="45dp" />
-    <Button
-        android:layout_marginTop="20dp"
-        android:id="@+id/btn_courseLecture"
-        android:text="강의 목록으로"
-        android:background="@drawable/button_design"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <WebView
+        android:id="@+id/courseWebView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
