--- a/AndroidStudioProjects/Paprika/app/src/main/res/layout/fragment_schedule.xml
+++ b/AndroidStudioProjects/Paprika/app/src/main/res/layout/fragment_schedule.xml
@@ -3,14 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ScheduleFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <TextView
-        android:id="@+id/fragment"
+    <WebView
+        android:id="@+id/scheduleWebView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="시간표"
-        android:textSize="45dp" />
+        android:layout_height="match_parent" />
 </LinearLayout>
