07/12 파프리카 하단메뉴바 추가&연결

--- a/AndroidStudioProjects/Paprika/app/src/main/res/layout/fragment_login.xml
+++ b/AndroidStudioProjects/Paprika/app/src/main/res/layout/fragment_login.xml
@@ -10,6 +10,7 @@
 
     <ImageView
         android:layout_marginTop="50dp"
+        android:layout_marginBottom="30dp"
         android:id="@+id/paprikapicture"
         android:layout_width="match_parent"
         android:layout_height="270dp"
