--- a/AndroidStudioProjects/Paprika/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/Paprika/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,19 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar_main" />
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:itemBackground="@drawable/borderlinetop"
+        app:labelVisibilityMode="unlabeled"
+        app:itemTextColor="@drawable/menu_selector_color"
+        app:itemIconTint="@drawable/menu_selector_color"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        app:menu="@menu/bottom_menu" />
+
+
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
