--- a/AndroidStudioProjects/Paprika/app/src/main/res/layout/fragment_home.xml
+++ b/AndroidStudioProjects/Paprika/app/src/main/res/layout/fragment_home.xml
@@ -38,7 +38,7 @@
     <Button
         android:layout_marginTop="50dp"
         android:id="@+id/btn_naver"
-        android:background="@drawable/button_design"
+        android:background="@drawable/cityicon"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_below="@id/btn_homeSchedule"/>
