07/14 파프리카 홈화면 정리

--- a/AndroidStudioProjects/Paprika/app/src/main/res/menu/bottom_menu.xml
+++ b/AndroidStudioProjects/Paprika/app/src/main/res/menu/bottom_menu.xml
@@ -21,7 +21,7 @@
         />
     <item
         android:id="@+id/menuImsi"
-        android:icon="@drawable/meicon"
+        android:icon="@drawable/cityicon"
         android:title="임시"
         android:enabled="true"
         />
