--- a/AndroidStudioProjects/Paprika/app/src/main/res/layout/fragment_home.xml
+++ b/AndroidStudioProjects/Paprika/app/src/main/res/layout/fragment_home.xml
@@ -37,18 +37,36 @@
         android:gravity="center"/>
     <Button
         android:layout_marginTop="50dp"
-        android:id="@+id/btn_naver"
+        android:id="@+id/btn_homePage"
         android:background="@drawable/cityicon"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_below="@id/btn_homeSchedule"/>
+    <TextView
+        android:layout_below="@id/btn_homePage"
+        android:layout_marginLeft="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="대학 홈페이지"
+        android:textSize="25sp"
+        android:gravity="center"/>
     <Button
         android:layout_marginTop="50dp"
         android:layout_marginLeft="50dp"
         android:id="@+id/btn_daum"
-        android:background="@drawable/button_design"
+        android:background="@drawable/searchicon"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_below="@id/btn_homeSchedule"
-        android:layout_toRightOf="@id/btn_naver"/>
+        android:layout_toRightOf="@id/btn_homePage"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btn_daum"
+        android:layout_marginLeft="210dp"
+        android:layout_marginTop="-2dp"
+        android:gravity="center"
+        android:text="포털 사이트"
+        android:textSize="25sp" />
 </RelativeLayout>
